1.4.1:
* segway: fix --prior-strength option

1.4.0:
* segway: added support for --num-minibatch-windows, which causes Segway
  to train on random subset of windows at each iteration in order to
  enable training to touch every genomic position while maintaining fast
  iterations. (thanks to Max Libbrecht)
* segway: remove optparse in favour of using argparse instead
* segway: fix --split-sequences specifying where to split GMTK frames instead
  of by base pair length

1.3.4:
* segway: set minimum segment length default to ruler length
* segway: remove simpleresubmit test from being tested with all tests by
  default due to memory requirement differences between platforms
* segway: change tests to use $testdir instead of $TMPDIR to avoid setting new
  base directory for segway-wrapper.sh
* segway: add and fix better job handling for segway-task (identify)
* segway: add drmaa handling for "IBM Platform LSF"
* segway: fix not using user specified ruler_scale when set to 10

1.3.2:
* segway: add GMTK minimum version checking (1.4.2) to support better GMTK job
  handling
* segway: add a job resubmission test due to out of memory issues
* segway: add a smarter job resubmission due to out of memory issues
* segway: add a better error message for out of memory issues vs actual process
  issues
* segway: update documentation on debugging GMTK job issues
* segway: add a minimum job attempt of 2 before stopping all jobs
* segway: add a new bad input testcase for proper job termination
* segway: add a new simple semisupervision test case
* segway: clarify documentation on resolution support
* segway: simplify installation instructions
* segway: fix help not printing when no arguments are given
* segway: add resolution test case
* segway: clarify and add GPLV2 license
* segway: add better test result capturing


1.3.1:
* segway: fix numpy array casting bug in posterior with newer versions of
  numpy (>= 1.10)